# webpub

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-30-webpub-design.md  2026-01-30-webpub-implementation.md  chat.txt
src/: archive.rs  chunker.rs  lib.rs  main.rs  merkle.rs  protocol.rs  scanner.rs
src/client/: list.rs  mod.rs  push.rs  rollback.rs
src/server/: http.rs  mod.rs  storage.rs  sync.rs
tests/: archive_tests.rs  chunker_tests.rs  cli_tests.rs  http_tests.rs  integration_test.rs  merkle_builder_tests.rs  merkle_tests.rs  protocol_tests.rs  scanner_tests.rs  storage_tests.rs
