[package]
name = "webpub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Static website publishing with content-based deduplication"
repository = "https://github.com/walnutgeek/webpub"
readme = "README.md"
keywords = ["static-site", "deploy", "deduplication", "cdc"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
fastcdc = "3"
blake3 = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
hex = "0.4"
futures-util = "0.3"
mime_guess = "2"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
